Including final adjustments

--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -36,6 +36,18 @@
     margin: 0,1em 0,1em 0 0,1em
     font-family: Arial, Helvetica, sans-serif
 
+span
+    position: fixed
+    top: fixed
+    align-items: center
+    text-align: center
+    width: 20%
+    height: 20%
+    top: 10em
+    bottom: 16em 
+    background-color: $gray
+    border-bottom-left-radius: $gray
+    padding-block-start: 60px
 
 
 
