--- a/src/app/login/login.component.sass
+++ b/src/app/login/login.component.sass
@@ -6,7 +6,7 @@
 .login-component
   font-size: 1.2em
   font-family: Arial, Helvetica, sans-serif
-  font-size: 0.1em
+  font-size: 0.02em
   display: flex
   justify-content: center
   padding-top: 4em
@@ -58,9 +58,11 @@
 
 #owner
   flex-direction: row
+  font-size: 0.6em 
   flex-wrap: nowrap
   justify-content: flex-end
   padding-right: 0.25em
+ 
 
 .form-check-input
   position: relative
@@ -68,8 +70,8 @@
   margin-right: 0.75em
 
 .button-group
-  display: flex
-  flex-direction: row
+  display: table-cell
+  width: 490px
 
 @media screen and (min-width: $screen-md-min) 
   .login-component
