--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,9 @@
 <header class="header">
-    <h1>Olá {{user.userName}}, você sabe como jogar? <button (click)="toggle()">
-       clique aqui e saiba mais!
-      </button></h1>
+  <div>
+    <h1>Olá {{user.userName}}, você sabe como jogar?</h1><p><a href="https://www.voitto.com.br/blog/artigo/planning-poker" target="_blank">
+      Acesse aqui e saiba mais.</a></p>
+    </div>
+
     <button class="btn btn-secondary btn-lg" (click)='logout()'>Sair</button>
    
 </header>
