--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,23 +1,13 @@
 <df-header></df-header>
 <div class="dashboard-content">
-        <div class='voting-control-panel'>
-            <div class="container btn-container">
-                <button 
-                class="btn btn-info" 
-                                        
-                    (click)='onStartVoting()'>
-                        Iniciar Votação</button>
-                    
-
-                <button class="btn btn-warning" 
-                
-                    
-                    (click)='clear()'>
-                        Zerar pontuação</button>
-            </div>
-            <h3 *ngIf='showVotes'>Pontuação: {{total}}</h3>
-    <df-votePanel></df-votePanel>
-
+        <div class='voting-control-panel'>           
+            <span *ngIf='showVotes'>Pontuação: {{total}}</span>
+<df-votePanel></df-votePanel>
         </div>
+        <div class="container btn-container">
+            <button class="btn btn-info" (click)='onStartVoting()'> Iniciar Votação</button>
+            <button class="btn btn-warning" (click)='clear()'> Zerar pontuação</button>
+         </div>
     <df-teamPanel></df-teamPanel>
+  
 </div>
