--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,20 +2,21 @@
     <div class="form-component">
         <h2>CADASTRO</h2>
         <form class="login-form mb-4" [formGroup]='loginForm' (ngSubmit)="enter()">
-        <mat-form-field appear="fill">
+       
             <div class="form-group" id='userName'>
                 <label for="usuario">Usuário</label>
                 <input matInput   type="text" name="userName" formControlName="userName">
             </div>
-        </mat-form-field>
+        
             <div class="form-group" id='owner'>
                 <input class="form-check-input" type="checkbox" name="owner" formControlName="owner">
-                <label class="form-check-label" for="owner">proprietária da sala</label>
+                <label class="form-check-label" for="owner"> proprietário</label>
             </div>
-            <div class="button-group">
-                <button aria-label="Entrar"  class="btn btn-success btn-lg btn-block"
-                    ng-class="{loginForm.valid: 'disabled'}" [disabled]="!loginForm.valid" type="submit">Entrar</button>
-                <button aria-label="Limpar dados" class="btn btn-outline-dark btn-lg btn-block" type="reset"
+            <div class="button-group">                
+                <button mat-stroked-button color="primary" aria-label="acessar"  
+                    ng-class="{loginForm.valid: 'disabled'}" [disabled]="!loginForm.valid" type="submit">Acessar</button>
+            
+                <button mat-stroked-button color="primary" aria-label="Limpar dados"  type="reset"
                     (click)="onReset()">Limpar dados</button>
             </div>
         </form>
